MonetDB/src/mal/Tests/tst120.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2001, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
##define 2 modules and check location of routines
#
#use tst120a;
!ERROR: malImport: could not open file: tst120a
#use tst120b;
!ERROR: malImport: could not open file: tst120b
#use tst120a;	# does not do anything
!ERROR: malImport: could not open file: tst120a
#
#a:= second("hh");
#b:= first(1);
#c:= first(1:sht);
#d:= first("hello world");
#e:= top.first(2:sht);
#
function Admin.main():int;	#0:(main:int->0)
	a := second("hh");	#1 unknown:(a:any->1)($2:str->2)
	b := first(1);	#2 unknown:(b:any->3)($4:int->4)
	c := first(1);	#3 unknown:(c:any->5)($4:int->4)
	d := first("hello world");	#4 unknown:(d:any->6)($7:str->7)
	e := top.first(2);	#5 unknown:(e:any->8)($9:sht->9)
end function;	#6:
!ERROR: MALexception:Admin.main[1]:Instruction type not fixed
>